--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,17 @@
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
             "name": "Launch",
             "type": "go",
             "request": "launch",
-            "remotePath": "${workspaceFolder}",
-            "mode": "remote",
-            "port": 3306,
-            "host": "127.0.0.1",
-            "program": "${workspaceFolder}",
-    }
-    ]    
+            "mode": "auto",
+            "program": "${fileDirname}",
+            "env": {},
+            "args": []
+        }
+    ]
 }
