--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ NUMERO_REGISTRO_POR_PAGINA=15
 
 # Dados de conexão do banco de dados
 # -------------------------------------------------
-DB_LOCALHOST=servidor_mysql_local
+DB_LOCALHOST=172.20.0.2
 DB_PORTA=3306
 DB_USUARIO=root
 DB_SENHA=yakTLS&70c52
